--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
             <!-- الخدمات -->
             <div data-aos="fade-left"  data-aos-duration="700"
               style="flex: 1 1 250px; background-color: #112b44; padding: 30px; border-radius: 15px; max-width: 300px;">
-              <img src="\assets\img\icons\flash.e93c6f95.svg" alt="الخدمات" style="width: 60px; margin-bottom: 20px;">
+              <img src="assets\img\icons\flash.e93c6f95.svg" alt="الخدمات" style="width: 60px; margin-bottom: 20px;">
               <h4 style="margin-bottom: 15px;">سرعة العمليات </h4>
               <p> نفّذ معاملاتك المالية بسرعة فائقة دون أي تأخير</p>
             </div>
@@ -505,7 +505,7 @@
             <!-- أمان الأموال -->
             <div data-aos="fade-left"  data-aos-duration="1300"
               style="flex: 1 1 250px; background-color: #112b44; padding: 30px; border-radius: 15px; max-width: 300px;">
-              <img src="\assets\img\icons\shield.b1befcaf.svg" alt="أمان الأموال"
+              <img src="assets\img\icons\shield.b1befcaf.svg" alt="أمان الأموال"
                 style="width: 60px; margin-bottom: 20px;">
               <h4 style="margin-bottom: 15px;">أمان الأموال</h4>
               <p>نضمن حماية كاملة لأموالك ومعاملاتك باستخدام أحدث تقنيات الأمان.</p>
@@ -514,7 +514,7 @@
             <!-- بدون رسوم -->
             <div data-aos="fade-up"  data-aos-duration="1500"
               style="flex: 1 1 250px; background-color: #112b44; padding: 30px; border-radius: 15px; max-width: 300px;">
-              <img src="\assets\img\icons\paper.561d1cf5.svg" alt="بدون رسوم" style="width: 60px; margin-bottom: 20px;">
+              <img src="assets\img\icons\paper.561d1cf5.svg" alt="بدون رسوم" style="width: 60px; margin-bottom: 20px;">
               <h4 style="margin-bottom: 15px;">بدون رسوم</h4>
               <p>استمتع بخدماتنا المالية بدون أي رسوم خفية. تتم كل معاملاتك بشفافية.</p>
             </div>
