--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
             <!-- سرعة العمليات -->
             <div data-aos="fade-left"  data-aos-duration="900"
               style="flex: 1 1 250px; background-color: #112b44; padding: 30px; border-radius: 15px; max-width: 300px;">
-              <img src="\assets\img\icons\services.0b870c89.svg" alt="سرعة العمليات"
+              <img src="assets\img\icons\services.0b870c89.svg" alt="سرعة العمليات"
                 style="width: 60px; margin-bottom: 20px;">
               <h4 style="margin-bottom: 15px;">الخدمات</h4>
               <p>نوفر مجموعة من الخدمات المتنوعة التي تلبي احتياجاتك اليومية وتوفر عليك الوقت والجهد</p>
@@ -496,7 +496,7 @@
             <!-- سهولة الاستخدام -->
             <div data-aos="fade-left"  data-aos-duration="1100"
               style="flex: 1 1 250px; background-color: #112b44; padding: 30px; border-radius: 15px; max-width: 300px;">
-              <img src="\assets\img\icons\user.0fff689a.svg" alt="سهولة الاستخدام"
+              <img src="assets\img\icons\user.0fff689a.svg" alt="سهولة الاستخدام"
                 style="width: 60px; margin-bottom: 20px;">
               <h4 style="margin-bottom: 15px;">سهولة الاستخدام</h4>
               <p>واجهة تطبيق بسيطة ومباشرة تسهل عليك إجراء العمليات دون تعقيد.</p>
