--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             <div class="header-elements">
               <div class="site-logo">
                 <a href="index.html">
-                  <img src="assets/img/logo/header-logo1.png" alt="">
+                  <img src="assets\img\about\WhatsApp Image 2025-04-11 at 2.43.20 PM.jpeg" alt="">
                 </a>
               </div>
 
@@ -314,7 +314,7 @@
 
   <div class="mobile-sidebar d-block d-lg-none">
     <div class="logo-m">
-      <a href="index.html"><img src="assets/img/logo/header-logo1.png" alt=""></a>
+      <img src="assets\img\about\WhatsApp Image 2025-04-11 at 2.43.20 PM.jpeg" alt="" style="max-width: 100%; height: auto; width: 150px;">
     </div>
     <div class="menu-close">
       <i class="fa-solid fa-xmark"></i>
@@ -734,7 +734,7 @@
           <div class="col-lg-4 col-md-6 col-12 fav">
             <div class="single-footer-items footer-logo-area">
               <div class="footer-logo">
-                <a href=""><img src="assets/img/logo/footer-logo1.png" alt="جبقجي لتجارة السيارات"></a>
+                <img src="assets\img\about\WhatsApp Image 2025-04-11 at 2.43.34 PM.jpeg" alt="جبقجي لتجارة السيارات" style="max-width: 100%; height: auto; width: 200px;">
               </div>
               <div class="space20"></div>
               <div class="heading1-w">
