--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@
       <div class="col-12">
         <div class="mobile-header-elements">
           <div class="mobile-logo">
-            <a href="index1.html"><img src="assets/img/logo/header-logo1.png" alt=""></a>
+            <a href=""><img src="assets\img\about\WhatsApp Image 2025-04-11 at 2.43.20 PM.jpeg"
+               alt=""  style="max-width: 100%; height: 80px; width: 120px;"></a>
           </div>
           <div class="mobile-nav-icon">
             <i class="fa-duotone fa-bars-staggered"></i>
