--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recrute - Staffing Agency</title>
+  <title>ETHRAA WALLET</title>
 
   <!--=====FAB ICON=======-->
-  <link rel="shortcut icon" href="assets/img/logo/titel4.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets\img\about\WhatsApp Image 2025-04-11 at 2.43.20 PM.jpeg" type="image/x-icon">
 
 
   <!--=====CSS=======-->
