--- a/index.html
+++ b/index.html
@@ -793,92 +793,98 @@
 
 
 
-
-    <div class="footer1 _relative contact" id="contact" style="background-color: #111; color: #fff;">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-6 col-12 fav">
-            <div class="single-footer-items footer-logo-area">
-              <div class="footer-logo">
-                <img src="assets\img\about\WhatsApp Image 2025-04-11 at 2.43.34 PM.jpeg"
-                 alt="جبقجي لتجارة السيارات" style="max-width: 100%; height: 150px; width: 200px;">
-              </div>
-              <div class="space20"></div>
-              <div class="heading1-w">
-                <p style="color: #ccc;">هدفنا هو تبسيط عملية الاستيراد، وتقديم حلول موثوقة لتلبية احتياجاتك في عالم
-                  السيارات الكورية.</p>
-              </div>
-              <ul class="social-icon" style="margin-top: 15px;">
-                <li><a href="#"><i class="fa-brands fa-facebook-f" style="color: #fff; font-size: 20px;"></i></a></li>
-                <li><a target="_blank" href="https://wa.me/+905368500667"><i class="fa-brands fa-whatsapp" style="color: #fff;"></i></a></li>
-                <li><a  target="_blank" href="https://telegram.me/Ethraawalet"><i class="fa-brands fa-telegram" style="color: #fff;"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-instagram" style="color: #fff;"></i></a></li>
-              </ul>
-            </div>
+<div class="footer1 _relative contact" id="contact" style="background-color: #111; color: #fff;">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 col-md-6 col-12 fav">
+        <div class="single-footer-items footer-logo-area">
+          <div class="footer-logo">
+            <img src="assets\img\about\WhatsApp Image 2025-04-11 at 8.03.56 PM.jpeg"
+             alt="جبقجي لتجارة السيارات" style="max-width: 100%; height: 150px; width: 200px;">
           </div>
-
-          <div class="col-lg col-md-6 col-12">
-            <div class="single-footer-items pl-3 move-left">
-              <h3 style="color: #fff;">استكشف</h3>
-              <ul class="menu-list">
-                <li><a class="" href="#hero">الرئيسية</a></li>
-                <li><a class="" href="#about">من نحن</a></li>
-                <li><a class="" href="#faqs">الأسئلة الشائعة</a></li>
-                <li><a class="" href="#contact">تواصل معنا</a></li>
-              </ul>
-            </div>
+          <div class="space20"></div>
+          <div class="heading1-w">
+            <p style="color: #ccc;">
+              الشريك الرسمي لمحفظة إثراء: البنك السعودي للاستثمار، شركة مساهمة سعودية برأس مال مدفوع قدره اثنا عشر مليار وخمسمائة مليون (12,500,000,000) ريال. 
+              مسجلة بالسجل التجاري رقم 1010011570، الرقم الموحد 7000029889، ص.ب 3533، الرياض 11481 المملكة العربية السعودية. 
+              رقم الهاتف 0114778433، العنوان الوطني 8081 - الشيخ عبد الرحمن بن حسن - الوزارات - المعذر وحدة رقم 2، الرياض 12622 - 3144، المملكة العربية السعودية. 
+              الموقع الإلكتروني <a href="https://www.saib.com.sa" style="color: #00bcd4;" target="_blank">www.saib.com.sa</a>، 
+              ومرخصة بموجب المرسوم الملكي رقم 31/م بتاريخ 25/06/1396، خاضعة لرقابة وإشراف البنك المركزي السعودي.
+            </p>
           </div>
-
-          <div class="col-lg-3 col-md-6 col-12">
-            <div class="single-footer-items">
-              <h3 style="color: #fff;" class="move-left">تواصل معنا</h3>
-              <div class="contact-box">
-                <div class="icon">
-                  <img src="assets/img/icons/footer-icon1.png" alt="الهاتف">
-                </div>
-                <div class="pera">
-                  <a href="tel:+90 536 850 06 67" style="color: #ccc;">+90 536 850 06 67</a>
-                </div>
-              </div>
-
-              <div class="contact-box">
-                <div class="icon">
-                  <img src="assets/img/icons/footer-icon2.png" alt="البريد الإلكتروني">
-                </div>
-                <div class="pera">
-                  <a href="mailto:ethraawalet@gmail.com" style="color: #ccc;">ethraawalet@gmail.com</a>
-                </div>
-              </div>
-
-              <!-- <div class="contact-box">
-                <div class="icon">
-                  <img src="assets/img/icons/footer-icon3.png" alt="الموقع">
-                </div>
-                <div class="pera">
-                  <a href="#" style="color: #ccc;">شارع 8502، منطقة الاستيراد، كوريا الجنوبية</a>
-                </div>
-              </div> -->
-            </div>
-          </div>
+          <ul class="social-icon" style="margin-top: 15px;">
+            <li><a href="#"><i class="fa-brands fa-facebook-f" style="color: #fff; font-size: 20px;"></i></a></li>
+            <li><a target="_blank" href="https://wa.me/+905368500667"><i class="fa-brands fa-whatsapp" style="color: #fff;"></i></a></li>
+            <li><a target="_blank" href="https://telegram.me/Ethraawalet"><i class="fa-brands fa-telegram" style="color: #fff;"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram" style="color: #fff;"></i></a></li>
+          </ul>
         </div>
-
-        <div class="space70"></div>
       </div>
 
-      <div class="copyright-area _relative" style="background-color: #000; padding: 15px 0;">
-        <div class="container">
-          <div class="row align-items-center">
-            <div class="col-md-12">
-              <div class="" style="text-align: center; color: #888;">
-                <p>© جميع الحقوق محفوظة - محفظة إثراء للإستثمار 2025</p>
-                <p>developed by Eng: <a target="_blank" href="https://wa.me/+201556477029"><span
-                      style="color: #00bcd4;">Saad Harera</span></a></p>
-              </div>
+      <div class="col-lg col-md-6 col-12">
+        <div class="single-footer-items pl-3 move-left">
+          <h3 style="color: #fff;">استكشف</h3>
+          <ul class="menu-list">
+            <li><a class="" href="#hero">الرئيسية</a></li>
+            <li><a class="" href="#about">من نحن</a></li>
+            <li><a class="" href="#faqs">الأسئلة الشائعة</a></li>
+            <li><a class="" href="#contact">تواصل معنا</a></li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6 col-12">
+        <div class="single-footer-items">
+          <h3 style="color: #fff;" class="move-left">تواصل معنا</h3>
+          <div class="contact-box">
+            <div class="icon">
+              <img src="assets/img/icons/footer-icon1.png" alt="الهاتف">
             </div>
+            <div class="pera">
+              <a href="tel:+90 536 850 06 67" style="color: #ccc;">+90 536 850 06 67</a>
+            </div>
+          </div>
+
+          <div class="contact-box">
+            <div class="icon">
+              <img src="assets/img/icons/footer-icon2.png" alt="البريد الإلكتروني">
+            </div>
+            <div class="pera">
+              <a href="mailto:ethraawalet@gmail.com" style="color: #ccc;">ethraawalet@gmail.com</a>
+            </div>
+          </div>
+
+          <!-- <div class="contact-box">
+            <div class="icon">
+              <img src="assets/img/icons/footer-icon3.png" alt="الموقع">
+            </div>
+            <div class="pera">
+              <a href="#" style="color: #ccc;">
+                8081 - الشيخ عبد الرحمن بن حسن - الوزارات - المعذر وحدة رقم 2، الرياض 12622 - 3144، المملكة العربية السعودية
+              </a>
+            </div>
+          </div> -->
+        </div>
+      </div>
+    </div>
+
+    <div class="space70"></div>
+  </div>
+
+  <div class="copyright-area _relative" style="background-color: #000; padding: 15px 0;">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-12">
+          <div class="" style="text-align: center; color: #888;">
+            <p>© جميع الحقوق محفوظة - محفظة إثراء للإستثمار 2025</p>
+            <p>developed by Eng: <a target="_blank" href="https://wa.me/+201556477029"><span
+                  style="color: #00bcd4;">Saad Harera</span></a></p>
           </div>
         </div>
       </div>
     </div>
+  </div>
+</div>
 
 
     <div class="fixed-container">
