--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
 
               <div class="header2-buttons">
                 <div class="button" >
-                  <a class="theme-btn1" style="background-color: #19326A !important;" href="https://wa.me/+905368500667"> تواصل معنا <span><i
+                  <a class="theme-btn1" style="background-color: #19326A !important;" href="https://wa.me/message/66NFNOEP3S3LC1"> تواصل معنا <span><i
                         class="fa-solid fa-arrow-right"></i></span></a>
                 </div>
               </div>
@@ -394,7 +394,7 @@
       </ul>
       <div class="header2-buttons">
         <div class="button">
-          <a class="theme-btn1" href="https://wa.me/+905368500667"  style="background-color: #19326A !important;" > تواصل معنا <span><i class="fa-solid fa-arrow-right"></i></span></a>
+          <a class="theme-btn1" href="https://wa.me/message/66NFNOEP3S3LC1"  style="background-color: #19326A !important;" > تواصل معنا <span><i class="fa-solid fa-arrow-right"></i></span></a>
         </div>
       </div>
     </div>
@@ -548,7 +548,7 @@
               </div>
 
               <div class="" data-aos="fade-left" data-aos-duration="900">
-                <a class="theme-btn10" href="https://wa.me/+905368500667">اعرف المزيد <span><i
+                <a class="theme-btn10" href="https://wa.me/message/66NFNOEP3S3LC1">اعرف المزيد <span><i
                       class="fa-solid fa-arrow-right"></i></span></a>
               </div>
             </div>
@@ -814,7 +814,7 @@
           </div>
           <ul class="social-icon" style="margin-top: 15px;">
             <li><a href="#"><i class="fa-brands fa-facebook-f" style="color: #fff; font-size: 20px;"></i></a></li>
-            <li><a target="_blank" href="https://wa.me/+905368500667"><i class="fa-brands fa-whatsapp" style="color: #fff;"></i></a></li>
+            <li><a target="_blank" href="https://wa.me/message/66NFNOEP3S3LC1"><i class="fa-brands fa-whatsapp" style="color: #fff;"></i></a></li>
             <li><a target="_blank" href="https://telegram.me/Ethraawalet"><i class="fa-brands fa-telegram" style="color: #fff;"></i></a></li>
             <li><a href="#"><i class="fa-brands fa-instagram" style="color: #fff;"></i></a></li>
           </ul>
@@ -888,7 +888,7 @@
 
 
     <div class="fixed-container">
-      <a href="https://wa.me/+905368500667" target="_blank" class="whatsapp-button">
+      <a href="https://wa.me/message/66NFNOEP3S3LC1" target="_blank" class="whatsapp-button">
         <i class="fa-brands fa-whatsapp" style="color: #fff;"></i>
       </a>
 
