--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@
       <div class="col-lg-4 col-md-6 col-12 fav">
         <div class="single-footer-items footer-logo-area">
           <div class="footer-logo">
-            <img src="assets\img\about\WhatsApp Image 2025-04-11 at 8.03.56 PM.jpeg"
+            <img src="assets\img\about\WhatsApp Image 2025-04-11 at 8.03.56 PM_preview_rev_1.png"
              alt="جبقجي لتجارة السيارات" style="max-width: 100%; height: 150px; width: 200px;">
           </div>
           <div class="space20"></div>
